<resources>
    <string name="app_name">Samarth Hospital</string>
    <string name="emailHint">E-mail</string>
    <string name="passwordHint">Password</string>
    <string name="invalidCredentialsMsg">Invalid Credentials</string>
    <string name="feesRangeSpecification">\*Fees should be less than Rs. 1000</string>

    <string-array name="degrees">
        <item>MD</item>
        <item>MBBS</item>
        <item>BDS</item>
        <item>BAMS</item>
        <item>BUMS</item>
    </string-array>

    <string-array name="specialisation">
        <item>Orthopedics</item>
        <item>Ophthalmology</item>
        <item>Anaesthesia</item>
    </string-array>
    <string name="title_activity_login_doctor">loginDoctor</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">Login failed</string>
    <string name="emailVerificationText">Please check your email to verify the e-mail address.</string>
    <string name="resetPasswordMessage">If you\'re a registered user,an email has been sent to you to Reset Password.Kindly check you mail!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

        <string name="blood_pressure_title">Blood Pressure Shootout</string>
        <string name="blood_pressure_instructions">Stay calm, reassure the person, help them sit or lie down, loosen tight clothing, seek medical help if needed.</string>

        <string name="unconsciousness_title">Unconsciousness</string>
        <string name="unconsciousness_instructions">Check responsiveness, breathing, and seek medical help immediately.</string>

        <string name="leakage_title">IV Leakage</string>
        <string name="leakage_instructions">Contain the leak, notify medical staff, monitor the patient, and follow medical instructions.</string>

</resources>